Fix CORS: use setAllowedOriginPatterns instead of setAllowedOrigins for credentials support