@@ -63,9 +63,9 @@ public class WebSecurityConfig {
         http.csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(request -> {
                     var corsConfiguration = new CorsConfiguration();
-                    corsConfiguration.setAllowedOrigins(List.of(allowedOrigin, "https://smart-dass-nw34.onrender.com", "http://localhost:3000"));
+                    corsConfiguration.setAllowedOriginPatterns(List.of("https://smart-dass-nw34.onrender.com", "http://localhost:3000", "http://localhost:5173", "*"));
                     corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                    corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+                    corsConfiguration.setAllowedHeaders(List.of("*"));
                     corsConfiguration.setExposedHeaders(List.of("Authorization"));
                     corsConfiguration.setAllowCredentials(true);
                     return corsConfiguration;
